[gd_scene load_steps=8 format=3 uid="uid://cucwiwl6qyqsg"]

[ext_resource type="Script" path="res://scripts/PlayerCharacter.gd" id="1_h7gas"]
[ext_resource type="Script" path="res://scripts/SpriteAnimator.gd" id="2_xyurh"]
[ext_resource type="Texture2D" uid="uid://cir8aen0d318c" path="res://textures/idleAnimation.png" id="3_wj8x4"]
[ext_resource type="Script" path="res://scripts/SpriteAnimation.gd" id="4_ui6xa"]
[ext_resource type="Texture2D" uid="uid://b3xgilsgrdjk" path="res://textures/runAnimation.png" id="5_jgofv"]
[ext_resource type="Texture2D" uid="uid://7nrcve7uje1m" path="res://textures/hideAnimation.png" id="6_6vq3g"]
[ext_resource type="PackedScene" uid="uid://d4kb2elj223eq" path="res://prefabs/hoe_tool.tscn" id="7_5jpyd"]

[node name="PlayerCharacter" type="Node2D"]
script = ExtResource("1_h7gas")

[node name="SpriteAnimator" type="Node2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("2_xyurh")

[node name="IdleDown" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("3_wj8x4")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 96, 24)
script = ExtResource("4_ui6xa")

[node name="IdleUp" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("3_wj8x4")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 24, 96, 24)
script = ExtResource("4_ui6xa")

[node name="IdleLeft" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("3_wj8x4")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 48, 96, 24)
script = ExtResource("4_ui6xa")

[node name="IdleRight" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("3_wj8x4")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 72, 96, 24)
script = ExtResource("4_ui6xa")

[node name="MoveDown" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("5_jgofv")
hframes = 6
region_enabled = true
region_rect = Rect2(0, 0, 144, 24)
script = ExtResource("4_ui6xa")

[node name="MoveUp" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("5_jgofv")
hframes = 6
region_enabled = true
region_rect = Rect2(0, 24, 144, 24)
script = ExtResource("4_ui6xa")

[node name="MoveLeft" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("5_jgofv")
hframes = 6
region_enabled = true
region_rect = Rect2(0, 48, 144, 24)
script = ExtResource("4_ui6xa")

[node name="MoveRight" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("5_jgofv")
hframes = 6
region_enabled = true
region_rect = Rect2(0, 72, 144, 24)
script = ExtResource("4_ui6xa")

[node name="HoeDown" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("6_6vq3g")
hframes = 10
region_enabled = true
region_rect = Rect2(0, 0, 240, 24)
script = ExtResource("4_ui6xa")

[node name="HoeUp" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("6_6vq3g")
hframes = 10
region_enabled = true
region_rect = Rect2(0, 24, 240, 24)
script = ExtResource("4_ui6xa")

[node name="HoeLeft" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("6_6vq3g")
hframes = 10
region_enabled = true
region_rect = Rect2(0, 48, 240, 24)
script = ExtResource("4_ui6xa")

[node name="HoeRight" type="Sprite2D" parent="SpriteAnimator"]
texture = ExtResource("6_6vq3g")
hframes = 10
region_enabled = true
region_rect = Rect2(0, 72, 240, 24)
script = ExtResource("4_ui6xa")

[node name="HoeTool" parent="." instance=ExtResource("7_5jpyd")]
